# Speak

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build_release.sh
.github/workflows/: build.yml
docs/: SPEC-1.0.md
docs/guide/: index.html
docs/guide/src/: README.md  build_guide.py  guide_assets.cpp  matte_demo.cpp
installer/: INSTALL-WINDOWS.txt  Install Speak (Windows).bat  Install Speak (macOS).command
ofx/Support/include/: ofxsImageEffect.h
ofx/include/: ofxColour.h  ofxImageEffectExt.h
plugin/: Info.plist  Makefile  SpeakCudaKernel.cu  SpeakMetalKernel.mm  SpeakOfxMain.cpp  SpeakOpenCLKernel.cpp  SpeakParams.h  SpeakPlugin.cpp  SpeakPlugin.h  speak_core.h
test/: check_cuda_syntax.sh  compile_opencl.cpp  cuda_shim.cuh  proto_halation.cpp  render_speak.cpp  test_describe.cpp  test_speak.cpp  test_speak_macbeth.cpp  test_speak_metal.mm  test_speak_opencl.cpp  test_speak_split.cpp
